--- a/index.html
+++ b/index.html
@@ -3,84 +3,66 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ООО БАШСНАБГАЗ</title>
+  <title>to-102 Копия — промежуточная версия</title>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
   <style>
-    body { background: #111; color: #fff; font-family: sans-serif; margin: 0; scroll-behavior: smooth; }
-    header, footer { background: #000; padding: 20px; text-align: center; }
-    .nav { display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; max-width: 1200px; margin: auto; }
-    .nav img { height: 50px; }
-    .nav a { color: #0f0; text-decoration: none; margin: 0 15px; font-weight: bold; }
+    body { margin: 0; background: #0f0f0f; color: #fff; font-family: sans-serif; }
+    header { background: #000; padding: 20px; position: sticky; top: 0; z-index: 1000; }
+    nav { display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; }
+    nav a { color: #0f0; text-decoration: none; font-weight: bold; }
+    .hero {
+      height: 80vh;
+      background: url('https://via.placeholder.com/1920x1080') center/cover no-repeat;
+      display: flex; flex-direction: column; justify-content: center; align-items: center;
+      text-align: center; padding: 20px;
+    }
+    .hero h1 { font-size: 48px; margin: 0; }
+    .hero p { font-size: 20px; opacity: 0.8; }
     .section { padding: 60px 20px; max-width: 1200px; margin: auto; }
-    h2 { text-align: center; }
-    .certificates { display: flex; gap: 20px; flex-wrap: wrap; justify-content: center; }
-    .certificates a img { width: 300px; border-radius: 10px; border: 2px solid #fff; transition: 0.3s ease; }
-    .certificates a img:hover { transform: scale(1.05); }
-    .contact-info { text-align: center; line-height: 2; }
-    iframe.map { width: 100%; height: 400px; border: none; border-radius: 12px; }
-    form { max-width: 500px; margin: auto; }
-    input, textarea { width: 100%; margin-bottom: 10px; padding: 10px; border-radius: 6px; border: none; }
-    button { background: #0f0; color: #000; padding: 10px 20px; border: none; border-radius: 6px; cursor: pointer; }
+    .section h2 { text-align: center; margin-bottom: 20px; }
+    footer { background: #000; text-align: center; padding: 30px; margin-top: 60px; }
   </style>
 </head>
 <body>
   <header>
-    <div class="nav">
-      <img src="logo.jfif" alt="Логотип">
-      <div>
-        <a href="#attestat">Аттестат</a>
-        <a href="#certs">Сертификаты</a>
-        <a href="#contacts">Контакты</a>
-      </div>
-    </div>
+    <nav>
+      <a href="#services">Услуги</a>
+      <a href="#about">О компании</a>
+      <a href="#benefits">Преимущества</a>
+      <a href="#contacts">Контакты</a>
+    </nav>
   </header>
 
-  <section class="section" id="attestat" data-aos="fade-up">
-    <h2>Аттестат аккредитации</h2>
-    <a href="Attestat.png" data-lightbox="docs" data-title="Аттестат">
-      <img src="Attestat.png" alt="Аттестат" style="width:100%; max-width:800px; display:block; margin:auto;">
-    </a>
+  <section class="hero" data-aos="fade">
+    <h1>Промежуточная версия</h1>
+    <p>Заготовка полной копии сайта to-102.ru</p>
   </section>
 
-  <section class="section" id="certs" data-aos="fade-up">
-    <h2>Сертификаты и документы</h2>
-    <div class="certificates">
-      <a href="Partner.png" data-lightbox="docs" data-title="Партнёр"><img src="Partner.png" alt="Партнёр"></a>
-      <a href="Prikaz.png" data-lightbox="docs" data-title="Приказ"><img src="Prikaz.png" alt="Приказ"></a>
-    </div>
+  <section id="services" class="section" data-aos="fade-up">
+    <h2>Услуги</h2>
+    <p>Блок с карточками услуг</p>
   </section>
 
-  <section class="section contact-info" id="contacts" data-aos="fade-up">
+  <section id="about" class="section" data-aos="fade-up">
+    <h2>О компании</h2>
+    <p>Описание компании</p>
+  </section>
+
+  <section id="benefits" class="section" data-aos="fade-up">
+    <h2>Преимущества</h2>
+    <p>Список ключевых преимуществ</p>
+  </section>
+
+  <section id="contacts" class="section" data-aos="fade-up">
     <h2>Контакты</h2>
-    <p><strong>ООО БАШСНАБГАЗ</strong></p>
-    <p>Адрес: г. Уфа, ул. Цветочная, д. 1/4</p>
-    <p>Телефон: +7 (927) 235-14-05</p>
-    <p>Email: <a href="mailto:to1629271@gmail.com" style="color:#0f0;">to1629271@gmail.com</a></p>
-    <p>Режим работы:<br>Пн–Пт: 08:00–19:00<br>Сб: 08:00–15:00<br>Вс: выходной</p>
-    <iframe class="map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ae54ef236f130c882c8f8bfe02f7257dbf897bded7bd9cf57f59a8ef2d7203e03&amp;source=constructor"></iframe>
-  </section>
-
-  <section class="section" data-aos="fade-up">
-    <h2>Обратная связь</h2>
-    <form action="https://formspree.io/f/mwkgrvko" method="POST">
-      <input type="text" name="name" placeholder="Ваше имя" required>
-      <input type="email" name="email" placeholder="Email" required>
-      <textarea name="message" rows="5" placeholder="Ваше сообщение" required></textarea>
-      <button type="submit">Отправить</button>
-    </form>
+    <p>Адрес, телефон, карта, форма</p>
   </section>
 
   <footer>
-    &copy; 2025 ООО БАШСНАБГАЗ
+    &copy; 2025 Копия сайта to-102.ru (промежуточная версия)
   </footer>
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
-  <script>
-    AOS.init();
-  </script>
-</body>
-</html>
+  <script>AOS.init();</script>
 </body>
 </html>
